--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -27,9 +27,11 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
     </head>
 
-
-
-    <body onload="app.init()">
+    <<body onload="app.init()">
+        <label>ID del dibujo:</label>
+        <input id="drawingId" type="number" min="1" placeholder="Ej: 25" />
+        <button onclick="app.connect()">Conectarse</button>
+        <br><br>
         <canvas id="canvas" width="800" height="600" style="border:1px solid black;"></canvas>
     </body>
 </html>
